--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,10 @@
         <link rel="stylesheet" href="{{ site.baseurl }}/css/normalize.css">
         <link rel="stylesheet" href="{{ site.baseurl }}/css/common.css">
         <!-- <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'> -->
-        <link href='http://fonts.googleapis.com/css?family=Sintony:400,700' rel='stylesheet' type='text/css'> 
+        <!-- <link href='http://fonts.googleapis.com/css?family=Sintony:400,700' rel='stylesheet' type='text/css'> --> 
+        <!-- <link href='http://fonts.googleapis.com/css?family=Metrophobic' rel='stylesheet' type='text/css'> -->
+        <!-- <link href='http://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic' rel='stylesheet' type='text/css'> -->
+        <link href='http://fonts.googleapis.com/css?family=Merriweather+Sans:400,400italic,700italic' rel='stylesheet' type='text/css'>  
 
     </head>
     <body>
