--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,14 +7,14 @@
         <meta name="viewport" content="width=device-width">
 
         <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="{{ site.url }}/css/syntax.css">
+        <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
 
         <!-- Custom CSS -->
         <!-- <link rel="stylesheet" href="/css/main.css"> -->
-        <link rel="stylesheet" href="{{ site.url }}/css/normalize.css">
-        <link rel="stylesheet" href="{{ site.url }}/css/common.css">
+        <link rel="stylesheet" href="{{ site.baseurl }}/css/normalize.css">
+        <link rel="stylesheet" href="{{ site.baseurl }}/css/common.css">
         <!-- <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'> -->
-        <!-- <link href='http://fonts.googleapis.com/css?family=Sintony:400,700' rel='stylesheet' type='text/css'> --> 
+        <link href='http://fonts.googleapis.com/css?family=Sintony:400,700' rel='stylesheet' type='text/css'> 
         <!-- <link href='http://fonts.googleapis.com/css?family=Metrophobic' rel='stylesheet' type='text/css'> -->
         <!-- <link href='http://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic' rel='stylesheet' type='text/css'> -->
         <!-- <link href='http://fonts.googleapis.com/css?family=Merriweather+Sans:400,400italic,700italic' rel='stylesheet' type='text/css'> -->
@@ -23,9 +23,9 @@
     <body>
       <div class="page">
         <div class="nav">
-            <a href="{{ site.url }}/">home</a>,
-            <a href="{{ site.url }}/ds/">discrete structures</a>,
-            <a href="{{ site.url }}/cv/">cv</a> 
+            <a href="{{ site.baseurl }}/">home</a>,
+            <a href="{{ site.baseurl }}/ds/">discrete structures</a>,
+            <a href="{{ site.baseurl }}/cv/">cv</a> 
         </div>
 
             {{ content }}
