--- a/css/common.css
+++ b/css/common.css
@@ -1,7 +1,8 @@
 html,body {
   color:#332211;
   //  font-family: "Lato", sans-serif;
-  font-family: "Merriweather Sans", sans-serif;
+  // font-family: "Merriweather Sans", sans-serif;
+  font-family: "Sintony", sans-serif;
   //  font-size: 16px;
 
   line-height:1.42em;
