--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="/css/normalize.css">
         <link rel="stylesheet" href="/css/common.css">
         <!-- <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'> -->
-        <link href='http://fonts.googleapis.com/css?family=Sintony:400,700' rel='stylesheet' type='text/css'> 
+        <link href='https://fonts.googleapis.com/css?family=Sintony:400,700' rel='stylesheet' type='text/css'> 
         <!-- <link href='http://fonts.googleapis.com/css?family=Metrophobic' rel='stylesheet' type='text/css'> -->
         <!-- <link href='http://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic' rel='stylesheet' type='text/css'> -->
         <!-- <link href='http://fonts.googleapis.com/css?family=Merriweather+Sans:400,400italic,700italic' rel='stylesheet' type='text/css'> -->
@@ -25,6 +25,7 @@
         <div class="nav">
             <a href="/">home</a>,
             <a href="/ds/">discrete structures</a>,
+            <a href="/cpp/">c++</a>,
             <a href="/cv/">cv</a> 
         </div>
 
