--- a/cpp/pagescss/markdown.css
+++ b/cpp/pagescss/markdown.css
@@ -1,4 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Vollkorn:400,400italic,700,700italic&subset=latin);
+/* @import url(https://fonts.googleapis.com/css?family=Vollkorn:400,400italic,700,700italic&subset=latin); */
+@import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic);
 
 html, body {
         padding:1em;
@@ -7,7 +8,7 @@ html, body {
         background:#fefefe;
 	}
 body {
-	font: 1.3em "Vollkorn", Palatino, Times;
+	font: 1.1em "Lato", Verdana, Arial, sans-serif;
 	color: #333;
 	line-height: 1.4;
 	/* text-align: justify; */
@@ -47,12 +48,13 @@ h1 {
 	font-weight: normal;
 	}
 h2 {
+	margin-top:3em;
 	font-weight: normal;
 	}
 h3 {
 	font-weight: normal;
 	font-style: italic;
-	margin-top:3em;
+	margin-top:2em;
 	}
 p {
 	margin-top:0;
@@ -74,7 +76,7 @@ blockquote {
 	}
 code {
 	font-family: "Consolas", "Menlo", "Monaco", monospace, serif;
-	font-size: .9em;
+	font-size: 0.95em;
 	/* background: white; */
   background: #f0f0f0;
   padding-left: 0.5em;
@@ -86,6 +88,8 @@ pre > code{
   padding-right: 0em;
 }
 pre {
+	font-size: 0.85em;
+
   margin-left: -2em;
   margin-right: -2em;
   border-top: solid 1px #f0f0f0;
