functional pprogramming course added

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
             <a href="/">home</a>,
             <a href="/ds/">discrete structures</a>,
             <a href="/cs136/">cs136</a>,
+            <a href="/fp/">functional programming</a>,
             <a href="/cv/">cv</a> 
         </div>
 
