--- a/bsfl/main.css
+++ b/bsfl/main.css
@@ -29,7 +29,7 @@ main { font-family: 'Rubik', sans-serif }
 
 .field {
   width: 100%;
-  background-color: #CFA; 
+/*  background-color: #CFA; */
   content: "";
   clear: both;
   display: table;
@@ -37,7 +37,7 @@ main { font-family: 'Rubik', sans-serif }
 
 .bench {
   width: 100%;
-  background-color: #CFA; 
+/*  background-color: #CFA; */
 }
 
 .row::after {
