--- a/bsfl/main.css
+++ b/bsfl/main.css
@@ -144,6 +144,10 @@ section.tab{
 .animate-top{position:relative;animation:animatetop 0.2s}@keyframes animatetop{from{top:-300px;opacity:0} to{top:0;opacity:1}}
 .animate-left{position:relative;animation:animateleft 0.2s}@keyframes animateleft{from{left:-300px;opacity:0} to{left:0;opacity:1}}
 
+#tab-help h4 {background-color:#cfa; padding-left:1em; padding-right: 1em;}
+#tab-help h5 {text-align: center; background-color:#efc;}
+div.help-emph {border: 1px #cfa solid; background-color: #efc; padding: 0.5em 1em 0.5em 1em; margin:1em;}
+
 div.money{
   display: inline-block; min-width:4em; text-align:center; background-color:#bea;
 }
